# bbdd-aplicadas-tp

./: .gitignore  README.md  SQL Server Scripts Management.slnx  tp.md
.claude/: settings.local.json
DBEngineConfig/: config-entorno-local-dev.md
GestionParquesNacionales/: CreateDatabase.sql  GestionParquesNacionales.sqlproj  Logins.sql  Parques.ufnCalculateTotal.sql  Pruebas.sql  README.md  RUN_ALL.sql  SQL Server Scripts Management.slnx  SQLAgentJobs.sql  dbo.trg_TriggerClient.sql
SistemaParquesNacionales/: SistemaParquesNacionales.slnx
SistemaParquesNacionales/GestionParquesNacionales/: GestionParquesNacionales.sqlproj
app/: .env.example  .gitignore  README.md  app.py  db.py  pyproject.toml
app/pages/: 1_Parques.py  2_Reportes.py  3_Mapa.py
database/: README.md
database/00_Setup/: 01_runAll.sql  02_importarData.sql  config.sql
database/01_DDL/: 01_base_esquemas.sql  02_tablas.sql
database/02_Seguridad/: 01_Roles.sql  02_Logins.sql  03_Users.sql  Cifrado.sql  scriptCreateRespaldo.sql  scriptCreateSeguridad.sql
database/04_Data/: datos_iniciales.sql
database/05_Imports/: 00_InfraestructuraImportacion.sql  Parques.uspImportarAreasProtegidas.sql  Parques.uspImportarEstadisticasVisitas.sql  Parques.uspImportarUbicacionesDeAreasProtegidas.sql
database/06_Reportes/: scriptReportes.sql  sp_reportes.sql
database/07_Testing/: test_Concesiones.uspConcesionAlta.sql  test_Concesiones.uspConcesionCreate.sql  test_Personal.uspAsignarGuia.sql  (+11 more)
datasets/: README.md
datos_origen/: README.md
docs/: norma-nomenclatura.md
scripts/: README.md  runAll.sql
(+47 files in other folders)
